--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "babel-preset-react-app": "^8.0.0",
     "bootstrap": "3.3.7",
     "case-sensitive-paths-webpack-plugin": "2.2.0",
-    "chartist": "0.10.1",
+    "chart.js": "^2.9.3",
     "css-loader": "2.1.1",
     "dotenv": "6.2.0",
     "dotenv-expand": "4.2.0",
@@ -48,6 +48,7 @@
     "react-app-polyfill": "^1.0.0",
     "react-bootstrap": "0.32.4",
     "react-chartist": "0.13.3",
+    "react-chartjs-2": "^2.10.0",
     "react-dev-utils": "^9.0.0",
     "react-dom": "16.8.6",
     "react-google-maps": "9.4.5",
