--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "postcss-normalize": "7.0.1",
     "postcss-preset-env": "6.6.0",
     "postcss-safe-parser": "4.0.1",
+    "prop-types": "^15.7.2",
     "react": "16.8.6",
     "react-app-polyfill": "^1.0.0",
     "react-bootstrap": "0.32.4",
@@ -53,9 +54,15 @@
     "react-dom": "16.8.6",
     "react-google-maps": "9.4.5",
     "react-notification-system": "0.2.17",
+    "react-redux": "^7.2.1",
     "react-router": "5.0.0",
     "react-router-dom": "5.0.0",
+    "react-select": "^3.1.0",
     "react-toggle": "4.0.2",
+    "redux": "^4.0.5",
+    "redux-form": "^8.3.6",
+    "redux-logger": "^3.0.6",
+    "redux-thunk": "^2.3.0",
     "resolve": "1.10.0",
     "sass-loader": "7.1.0",
     "semver": "6.0.0",
