--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "react-bootstrap": "0.32.4",
     "react-chartist": "0.13.3",
     "react-chartjs-2": "^2.10.0",
+    "react-data-table-component": "^6.11.5",
     "react-dev-utils": "^9.0.0",
     "react-dom": "16.8.6",
     "react-google-maps": "9.4.5",
@@ -67,6 +68,7 @@
     "sass-loader": "7.1.0",
     "semver": "6.0.0",
     "style-loader": "0.23.1",
+    "styled-components": "^5.2.0",
     "terser-webpack-plugin": "1.2.3",
     "url-loader": "1.1.2",
     "webpack": "4.29.6",
